--- a/admincar/templates/admincar/admin_base.html
+++ b/admincar/templates/admincar/admin_base.html
@@ -6,13 +6,12 @@
     <title>{% block title %}Admin | Warp Car Rental{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://cdn.tailwindcss.com"></script> <link href="{% static 'dist/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'dist/styles.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="//unpkg.com/alpinejs" defer></script>
 
     <style>
-        /* Font Sarabun */
         @import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;700&display=swap');
         body { font-family: 'Sarabun', sans-serif; }
     </style>
